# keys4all

./: build.xml  gen_docs.sh  readme.md
docs/: readme.md
docs/js-modules/: AccountKeyInfo.html  KeyInfo.html  index.html  module-AccountManager.html  module-CommonUtils.html  module-GPGIPC.html  module-HKPS-AccountKeyInfo.html  module-HKPS-KeyInfo.html  module-HKPS-RecipientKeyInfo.html  module-HKPS.html  module-KeyManager.html  module-Logger-AccountKeyInfo.html  module-Logger-KeyInfo.html  module-Logger.html  modules.js.html
native_src/SecureFetch/: CMakeLists.txt  CMakeLists_win.txt  deps.txt  readme.md  secure-fetch.c
native_src/WinGetEnv/: CMakeLists.txt  build.readme  main.c
python_src/: ldap.py  ldap_tool.py  ldap_tool.spec
src/: chrome.manifest  install.rdf
src/chrome/content/: main-window.xul  vvv-key-lookup-overlay.xul
src/chrome/content/ui/: index.html  templates.html  vvv-key-lookup-iframe.html  vvv-key-updater.html
src/chrome/content/ui/css/: vvv.css
src/chrome/content/ui/js/: localStorage.js  modules.js  openpgp.min.js  vvv-account-manager.js  vvv-cache.js  vvv-key-cache.js  vvv-key-lookup-iframe.js  vvv-key-lookup.js  vvv-key-upload.js  vvv-overlay.js  vvv-templateloader.js
src/chrome/locale/de-DE/: vvv.dtd
src/chrome/locale/en-US/: vvv.dtd
